added all files

--- a/css/main.css
+++ b/css/main.css
@@ -755,7 +755,7 @@ ul.social-links li:last-child a {
 .home-page-block h2 {
   color: #fff;
   text-align: center;
-  font-size: 100%;
+  font-size: 60px;
   margin: 0;
 }
 
